<resources>
    <string name="app_name">FoodTick</string>
    <string name="nombreapp1">Food</string>
    <string name="nombreapp2">Tick</string>
    <string name="aloha"> Buenos Días</string>
    <string name="textBienvenida">En esta aplicaion te diremos cuales de nuestros productos, de los que disponemos en la base de datos, son saludables para tu alimentación y caules no.</string>
    <string name="textBienvenida2">Escoge una categoría y busca el alimentos que deseas.</string>
    <string name="carnes">Carnes</string>
    <string name="pescados">Pescados</string>
    <string name="Hortalizas">Hortalizas</string>
    <string name="Azucares">Azucares</string>
    <string name="Bebidas">Bebidas</string>
    <string name="Pasta">Pasta</string>
    <string name="Pastelería">Pastelería</string>
    <string name="Ultraprocesados">Procesados</string>
    <string name="infoNutricional">Información nutricional del alimento</string>
    <string name="essaludable">ES SALUDABLE</string>
    <string name="noessaludable">NO ES SALUDABLE</string>
    <string name="tencuidado">NO ES MUY SALUDABLE</string>
    <string name="esbueno">¿ES BUENO PARA TI?</string>
    <string name="vaciarCesta">Vaciar cesta</string>
    <string name="menu">Menú</string>
    <string name="azucar">Azucar</string>
    <string name="grasa">Grasa</string>
    <string name="sal">Sal</string>
    <string name="masInfo">Mas Información</string>
    <string name="cantidad">Por defecto 100g</string>
    <string name="loSiento">Lo siento :(</string>
    <string name="loSiento2">No has introducido nada en el menú. Por favor vuelve a la pantalla principal y selecciona algún plato.</string>
    <string name="titulodialog">Cuidado!</string>
    <string name="textodialog">No puedes saber si comes saludablemente si ni siquiera escoges comida. En esta aplicación no aceptamos el no comer, así que te pedimos que regreses a la pantalla principal y escojas tus platos favoritos, sin rechistar, y que no vea yo que te dejas nada en el plato que estás en los huesos.</string>
    <string name="cereales">Cereales y derivados</string>
    <string name="bebidas">Bebidas</string>
    <string name="fruta">Fruta</string>
    <string name="legumbres">Legumbres</string>
    <string name="lacteos">Lácteos</string>
    <string name="huevos">Huevos</string>
    <string name="verduras">Verduras y hortalizas</string>
    <string name="frutosSecos">Semillas y frutos secos</string>
    <string name="comoestas">¿Estás en forma?</string>
    <string name="igc">IGC</string>
    <string name="ge">GE</string>
    <string name="tituloigc">Calculando el Indice de Grasa Corportal (IGC)</string>
    <string name="tituloge">Calculando el Gasto Energético (GE)</string>
    <string name="altura">Introduce la altura: </string>
    <string name="peso">Introduce tu peso: </string>
    <string name="calcula">Calcular</string>
    <string name="edad">Introduce tu edad: </string>
    <string name="genero">Género:</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="activi">Actividad diaria:</string>
    <string name="ligera">Ligera</string>
    <string name="moderada">Moderada</string>
    <string name="intensa">Intensa</string>
    <string name="tumetabolismoes">Tu metabolismo basal es: </string>
    <string name="tugastototal">Tu gasto energético total es: </string>
    <string name="obesidadMorvi">Obesidad Morvida:</string>
    <string name="obesidadtipo2">Obesidad Tipo II: </string>
    <string name="obesidadtipo1">Obesidad Tipo I: </string>
    <string name="sobrepeso">Sobrepeso: </string>
    <string name="normal">Peso normal: </string>
    <string name="desnutricionleve">Desnutrición leve: </string>
    <string name="desnutricionmedia">Desnutrición moderada: </string>
    <string name="desnutricionmaxima">Desnutrición grave: </string>
</resources>
