<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/menu"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnVaciarCesta"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/boton_redondo"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/vaciarCesta"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btnCalcularSaludable"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/boton_redondo"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/esbueno"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <ListView
        android:id="@+id/lvMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_light_blue_50"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/loNadaCesta"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_light_blue_50"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/hungry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/loSiento"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/loSiento2"
            android:textColor="@color/black"
            android:textSize="12dp" />

    </LinearLayout>

</LinearLayout>