<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LLProducto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:adjustViewBounds="true"
    android:background="@drawable/fondoprodudefualt"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".Producto">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/fondo_item"
        android:orientation="vertical">


        <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/NombreProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:paddingTop="30dp"
            android:paddingBottom="5dp"
            android:text="Nombre del Alimento"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/CategoriaProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="Categoría de la comida"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/boton_redondo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:text="@string/infoNutricional"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:paddingTop="0dp"
                    android:paddingBottom="5dp"
                    android:text="@string/azucar"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/cantidadCaloricas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center"
                    android:text="113"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center"
                    android:text="g/100 gr"
                    android:textColor="@color/black"
                    android:textSize="8sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:paddingTop="0dp"
                    android:paddingBottom="5dp"
                    android:text="@string/sal"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/cantidadHidratos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center"
                    android:text="20.6"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center"
                    android:text="g/100 gr"
                    android:textColor="@color/black"
                    android:textSize="8sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:paddingTop="0dp"
                    android:paddingBottom="5dp"
                    android:text="@string/grasa"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/cantidadGrasas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center"
                    android:text="3.4"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center"
                    android:text="/100 gr"
                    android:textColor="@color/black"
                    android:textSize="8sp" />


            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="100dp"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:background="@drawable/boton_redondo" />


        <TextView
            android:id="@+id/txSaludable"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="35dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/boton_saludable"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/essaludable"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>